--- a/app/src/main/res/layout/row_folder.xml
+++ b/app/src/main/res/layout/row_folder.xml
@@ -5,23 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="1dp"
-    app:cardBackgroundColor="#C5C5C5">
+    app:cardBackgroundColor="#E1E0E0">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:background="#8BC34A">
+        android:layout_margin="5dp"
+        android:layout_marginLeft="0dp"
+        android:background="#FFFFFF">
 
 
         <TextView
             android:id="@+id/tvFolderName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
 
+            android:layout_marginEnd="8dp"
             android:text="TextView"
             android:textColor="#000000"
             android:textStyle="bold"
@@ -33,14 +34,29 @@
             android:id="@+id/tvNotesCount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="8dp"
             android:text="TextView"
             android:textColor="#000000"
+            android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvFolderName" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="6dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tvFolderName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/folder" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
